Re-show the end session dialog when an inhibitor disappears

The current code shows the dialog again when a client disappears.
If we don't show the dialog again on inhibitor changes, we can get
stuck in the query-end-session phase when applications take inhibitors
without registering as a client. gedit does this, for example.

https://bugzilla.gnome.org/show_bug.cgi?id=702575